# IrisPy2

./: .gitignore  README.md  example-pykakaodb.py  example.py  pyproject.toml
examples/: example-pykakaodb.py  example.py
irispy2/: __init__.py  cli.py
irispy2/_internal/: __init__.py
irispy2/bot/: __init__.py  models.py  services.py
irispy2/bot/_internal/: __init__.py  emitter.py  iris.py
irispy2/compat/pykakaodb/: __init__.py  context.py  kakaodb.py  legacy_bot.py  replier.py
irispy2/core/: decrypt.py  emitter.py
irispy2/iris/: __init__.py
irispy2/models/: __init__.py
irispy2/utils/: __init__.py
